@@ -4,11 +4,8 @@ import org.openqa.selenium.By;
 import org.openqa.selenium.NoSuchElementException;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
-import org.openqa.selenium.support.FindBy;
-import org.openqa.selenium.support.ui.Select;
 
 import java.util.List;
-import java.util.Random;
 
 import static org.openqa.selenium.support.ui.ExpectedConditions.stalenessOf;
 
@@ -30,20 +27,28 @@ public class CartPage extends Page {
         }catch (NoSuchElementException e){
             //NOP
         }
-        return Double.valueOf(0);
+        return new Double(0);
     }
 
 
     public boolean isSummaryTablePresent(){
-        return driver.findElements(By.cssSelector("table.dataTable")).size()>0?true:false;
+        return driver.findElements(By.cssSelector("table.dataTable")).size()>0;
     }
 
 
 
     public void deleteItem(){
         List<WebElement> liList = driver.findElements(By.cssSelector("div#checkout-cart-wrapper li.item"));
+        //fixing at same place
+        if (liList.size()>1) {
+            driver.findElement(By.cssSelector("div#main ul.shortcuts li.shortcut")).click();
+        }
+
         if (liList.size()>0){
             WebElement table = driver.findElement(By.cssSelector("table.dataTable"));
+            WebElement input = driver.findElement(By.cssSelector("div#checkout-cart-wrapper li.item form[name='cart_form'] input[name='quantity']"));
+            input.clear();
+            input.sendKeys("1");
             driver.findElement(By.cssSelector("div#checkout-cart-wrapper li.item button[name=remove_cart_item]")).click();
             wait.until(stalenessOf(table));
             if (liList.size()>1)
